:bug: Various compatibility fixes for JDK9 JDK10