@@ -1,5 +1,6 @@
 package fr.uem.efluid.utils;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Driver;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -37,15 +38,13 @@ public final class DatasourceUtils {
 	private static DataSource prepareDatasource(CustomDataSourceParameters params) {
 
 		try {
-			DriverManager.registerDriver(((Class<Driver>) Class.forName(params.getDriverClassName())).newInstance());
+			DriverManager.registerDriver(((Class<Driver>) Class.forName(params.getDriverClassName()))
+					.getDeclaredConstructor().newInstance());
 
 			// Prepare standard HikariDataSource
-			HikariDataSource kc = (HikariDataSource) DataSourceBuilder.create()
-					.url(params.getUrl())
-					.driverClassName(params.getDriverClassName())
-					.username(params.getUsername())
-					.password(params.getPassword())
-					.build();
+			HikariDataSource kc = (HikariDataSource) DataSourceBuilder.create().url(params.getUrl())
+					.driverClassName(params.getDriverClassName()).username(params.getUsername())
+					.password(params.getPassword()).build();
 
 			// Prepare pool configuration and other params
 			kc.setTransactionIsolation(TRANSACTION_ISOLATION);
@@ -57,15 +56,17 @@ public final class DatasourceUtils {
 			kc.setMaximumPoolSize(params.getMaxPoolSize());
 
 			return kc;
-		} catch (InstantiationException | IllegalAccessException | ClassNotFoundException | SQLException e) {
-			throw new ApplicationException(ErrorType.WRONG_DS_TYPE, "Cannot init Driver " + params.getDriverClassName());
+		} catch (InstantiationException | IllegalAccessException | ClassNotFoundException | SQLException
+				| IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
+			throw new ApplicationException(ErrorType.WRONG_DS_TYPE,
+					"Cannot init Driver " + params.getDriverClassName());
 		}
 	}
 
 	/**
 	 * <p>
-	 * A basic definition for a datasource spec. App needs 2 : one "core" DB for own data
-	 * (using standard spring boot config), and one "parameters" DB for managed
+	 * A basic definition for a datasource spec. App needs 2 : one "core" DB for own
+	 * data (using standard spring boot config), and one "parameters" DB for managed
 	 * application, built from this configuration model.
 	 * 
 	 * @author elecomte
@@ -99,8 +100,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param driverClassName
-		 *            the driverClassName to set
+		 * @param driverClassName the driverClassName to set
 		 */
 		public void setDriverClassName(String driverClassName) {
 			this.driverClassName = driverClassName;
@@ -114,8 +114,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param url
-		 *            the url to set
+		 * @param url the url to set
 		 */
 		public void setUrl(String url) {
 			this.url = url;
@@ -129,8 +128,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param connectionTestQuery
-		 *            the connectionTestQuery to set
+		 * @param connectionTestQuery the connectionTestQuery to set
 		 */
 		public void setConnectionTestQuery(String connectionTestQuery) {
 			this.connectionTestQuery = connectionTestQuery;
@@ -144,8 +142,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param minimumIdle
-		 *            the minimumIdle to set
+		 * @param minimumIdle the minimumIdle to set
 		 */
 		public void setMinimumIdle(int minimumIdle) {
 			this.minimumIdle = minimumIdle;
@@ -159,8 +156,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param maxPoolSize
-		 *            the maxPoolSize to set
+		 * @param maxPoolSize the maxPoolSize to set
 		 */
 		public void setMaxPoolSize(int maxPoolSize) {
 			this.maxPoolSize = maxPoolSize;
@@ -174,8 +170,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param timeout
-		 *            the timeout to set
+		 * @param timeout the timeout to set
 		 */
 		public void setTimeout(int timeout) {
 			this.timeout = timeout;
@@ -189,8 +184,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param username
-		 *            the username to set
+		 * @param username the username to set
 		 */
 		public void setUsername(String username) {
 			this.username = username;
@@ -204,8 +198,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param password
-		 *            the password to set
+		 * @param password the password to set
 		 */
 		public void setPassword(String password) {
 			this.password = password;
@@ -219,8 +212,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param query
-		 *            the query to set
+		 * @param query the query to set
 		 */
 		public void setQuery(CustomQueryGenerationRules query) {
 			this.query = query;
@@ -261,8 +253,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param columnNamesProtected
-		 *            the columnNamesProtected to set
+		 * @param columnNamesProtected the columnNamesProtected to set
 		 */
 		public void setColumnNamesProtected(boolean columnNamesProtected) {
 			this.columnNamesProtected = columnNamesProtected;
@@ -277,8 +268,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param tableNamesProtected
-		 *            the tableNamesProtected to set
+		 * @param tableNamesProtected the tableNamesProtected to set
 		 */
 		public void setTableNamesProtected(boolean tableNamesProtected) {
 			this.tableNamesProtected = tableNamesProtected;
@@ -293,8 +283,7 @@ public final class DatasourceUtils {
 		}
 
 		/**
-		 * @param databaseDateFormat
-		 *            the databaseDateFormat to set
+		 * @param databaseDateFormat the databaseDateFormat to set
 		 */
 		public void setDatabaseDateFormat(String databaseDateFormat) {
 			this.databaseDateFormat = databaseDateFormat;
